# Phantom-Files

./: .gitignore  LICENSE  Makefile  README.md  README_ru.md  fake_tests.sh  mac_orchestrator_tests.py  nfpm.yaml  orchestrator-check.sh  prod-check.sh  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
config/: logging.yaml  phantom.yaml  policies.yaml  traps_manifest.yaml
config/manifests/: credentials.yaml  documents.yaml  infrastructure.yaml  kubernetes.yaml
deploy/: phantom.logrotate  phantom.service  setup.sh  uninstall.sh
deploy/scripts/: enable_bpf_lsm.sh  postinstall.sh  (+2 more)
docs/: API.md  CONFIG.md  CONFIG_ru.md  RUNBOOK.md  RUNBOOK_ru.md  architecture-v2-rfc.md  architecture.md  threat-model.md
tests/: conftest.py  test_asgi_app.py  test_audit_logger.py  test_bootstrap.py  test_cli.py  test_config.py  test_content_generator.py  test_control_plane.py  test_crypto.py  test_daemon.py  test_dispatcher.py  test_ebpf_sensor.py  test_ecs.py  test_enforcement.py  test_exporters.py  test_exporters_runtime.py  test_file_system_collector.py  test_filters.py  test_forensics_chain.py  test_forensics_sandbox.py  test_fs_utils.py  test_incident_store.py  test_incidents.py  test_jwt_auth.py  test_main_helpers.py  test_manifest_loader.py  test_network_collector.py  test_network_enforcer.py  test_orchestrator_benign.py  test_orchestrator_full.py  test_persistence.py  test_policy_engine.py  test_precapture.py  test_prod_readiness.py  test_rate_limiter.py  test_rotation.py  test_sandbox.py  test_sensor_manager.py  test_sensor_manager_selection.py  test_state.py  (+6 more)
(+60 files in other folders)
